--- a/manual/pagerduty.html
+++ b/manual/pagerduty.html
@@ -191,6 +191,13 @@
 </div>
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/856b05c480798c10bac14bb80df41477d612a1f6">19 Nov 2020</a>
 </div>
