--- a/document-types/policy_paper.html
+++ b/document-types/policy_paper.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: policy_paper</h1>
 
-  <p>There are <strong>10628</strong> pages with document type
+  <p>There are <strong>10629</strong> pages with document type
 &lsquo;policy_paper&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -364,7 +364,6 @@
 <ul>
 <li><a href="https://www.gov.uk/government/publications/tax-on-cryptoassets">Tax on cryptoassets</a></li>
 <li><a href="https://www.gov.uk/government/publications/uk-community-renewal-fund-prospectus">UK Community Renewal Fund: prospectus</a></li>
-<li><a href="https://www.gov.uk/government/publications/self-employment-income-support-scheme-grant-extension">Self-Employment Income Support Scheme fourth grant</a></li>
 <li><a href="https://www.gov.uk/government/publications/national-planning-policy-framework--2">National Planning Policy Framework</a></li>
 <li><a href="https://www.gov.uk/government/publications/changes-to-the-coronavirus-job-retention-scheme">Changes to the Coronavirus Job Retention Scheme</a></li>
 <li><a href="https://www.gov.uk/government/publications/queens-speech-2021-background-briefing-notes">Queen&rsquo;s Speech 2021: background briefing notes</a></li>
@@ -372,6 +371,7 @@
 <li><a href="https://www.gov.uk/government/publications/dbs-privacy-policies">DBS Privacy Policies</a></li>
 <li><a href="https://www.gov.uk/government/publications/global-travel-taskforce-safe-return-of-international-travel">Global Travel Taskforce: safe return of international travel</a></li>
 <li><a href="https://www.gov.uk/government/publications/benefit-and-pension-rates-2021-to-2022">Benefit and pension rates 2021 to 2022</a></li>
+<li><a href="https://www.gov.uk/government/publications/global-britain-in-a-competitive-age-the-integrated-review-of-security-defence-development-and-foreign-policy">Global Britain in a Competitive Age: the Integrated Review of Security, Defence, Development and Foreign Policy</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=policy_paper&amp;count=10">Source query from Search API</a></p>
 
